<resources>
    <string name="app_name">D.I.P.T.</string>
    <string name="insert_dummy_data">Insert dummy data</string>
    <string name="delete_all">Delete all</string>
    <string name="action_save">action_save</string>
    <string name="action_delete">action_delete</string>
    <string name="day_monday">monday</string>
    <string name="day_tuesday">tuesday</string>
    <string name="day_wednesday">wednesday</string>
    <string name="day_thursday">thursday</string>
    <string name="day_friday">friday</string>
    <string name="day_saturday">saturday</string>
    <string name="day_sunday">sunday</string>
    <string name="date">Date</string>
    <string name="hint_date">choose date</string>
    <string name="day_of_activity">Day of activity</string>
    <string name="duration">Duration</string>
    <string name="activity_duration">activity duration</string>
    <string name="add_activity">Add poo report</string>
    <string name="d_i_p_t">D.I.P.T?</string>
    <string name="hour">Hour</string>
    <string name="hint_time">choose time</string>
    <string name="description_title">More details</string>
    <string name="edit_details">Enter more details if you want</string>
</resources>
