<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context="pl.nataliana.didipoo.AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/date"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:orientation="vertical">

            <DatePicker
                android:id="@+id/edit_date"
                android:animateLayoutChanges="true"
                android:calendarViewShown="false"
                android:hint="@string/hint_date"
                style="@style/EditorFieldStyle" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/hour"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:orientation="vertical">

            <TimePicker
                android:id="@+id/edit_time"
                style="@style/EditorFieldStyle"
                android:animateLayoutChanges="true"
                android:hint="@string/hint_time"
                android:timePickerMode="spinner" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/description_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/description_title"
            style="@style/CategoryStyle" />

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingStart="4dp"
            android:paddingEnd="4dp">

            <EditText
                android:id="@+id/edit_details"
                android:hint="@string/edit_details"
                android:inputType="text"
                style="@style/EditorFieldStyle" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
